<resources>
    <string name="app_name"><font color="@colors/appName">O której odjazd?</font></string>
    <string name="about">O aplikacji</string>
    <string name="noBusStops"><i>Nie masz żadnych przystanków na liście.
        Kliknij przycisk w prawym dolnym rogu aby dodać nowy przystanek.</i></string>
    <string name="polecenie">Wpisz godzinę</string>
    <string name="button">Sprawdź</string>
    <string name="hint">Godzina (np. 14)</string>
    <string name="instruction"><i>Kliknij na przystanek, którego rozkład chcesz poznać.\n</i></string>
    <string name="busHint">Lokalizacja (np. Centrum)</string>
    <string name="busText"><i>Wpisz nazwę przystanku, który chcesz dodać do swojej listy.
        Po wpisaniu, kliknij przycisk.\n</i></string>
    <string name="busStopBtn">SZUKAJ</string>
    <string name="deleteDialogMessage">Na pewno chcesz usunąć ten przystanek z listy?</string>
    <string name="deleteDialogTitle">USUŃ PRZYSTANEK</string>
    <string name="positiveDialogBtn">Tak</string>
    <string name="negativeDialogBtn">Nie</string>
    <string name="version_author">\nWersja aplikacji: 1.1
        \nAutor: Grzegorz Gołębiowski</string>
    <string name="app_info">
        Aplikacja obsługuje wszystkie przystanki ze strony &lt;a href="http://www.ztm.waw.pl">ZTM Warszawa&lt;/a>.
        Mapa wszystkich lokalizacji jest dostępna &lt;a href="http://www.ztm.waw.pl/?c=198&amp;l=1">tutaj&lt;/a>.
        \nBędę wdzięczny za wszelkie sugestie.</string>
</resources>
