<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:layout_margin="10dp">

    <TextView
        android:id="@+id/busStopTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:text="@string/busText"
        android:textAlignment="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/busStopInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/busStopBtn"
        android:layout_alignBottom="@+id/busStopBtn"
        android:layout_alignLeft="@+id/busStopTextView"
        android:layout_alignStart="@+id/busStopTextView"
        android:layout_toLeftOf="@+id/busStopBtn"
        android:layout_toStartOf="@+id/busStopBtn"

        android:hint="@string/busHint"
        android:inputType="text"
        android:textSize="14sp" />

    <Button
        android:id="@+id/busStopBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textSize="14sp"
        android:layout_below="@+id/busStopTextView"
        android:text="@string/busStopBtn" />

    <ProgressBar
        android:id="@+id/busStopProgressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_margin="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/busStopBtn"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <ListView
        android:id="@+id/busStopSuggestions"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/busStopProgressBar" />

    <ListView
        android:visibility="gone"
        android:id="@+id/busStopOutput"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/busStopProgressBar" />

</RelativeLayout>